--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#484949</color>
+    <color name="colorPrimaryDark">#2e2e2e</color>
+    <color name="colorAccent">#275ae9</color>
+    <color name="colorAccentDark">#1d45b7</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
