--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,67 +5,94 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
         tools:context=".MainActivity" android:orientation="vertical">
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:layout_marginBottom="5dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+    <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/input_label_origin">
+            android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:maxLines="1"
-                android:textSize="16sp"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/dialog_text_input_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/input_label_destination"
-            app:errorEnabled="true">
-
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/dialog_edit_text"
-                android:layout_width="match_parent"
+        <com.google.android.material.tabs.TabItem
+                android:id="@+id/car_tab"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:maxLines="1"
-                android:textSize="16sp"/>
-    </com.google.android.material.textfield.TextInputLayout>
+                android:layout_width="wrap_content"
+                android:icon="@drawable/car_icon"
+                android:text="@string/car_tab_label"/>
+        <com.google.android.material.tabs.TabItem
+                android:id="@+id/fuel_tab"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:icon="@drawable/fuel_icon"
+                android:text="@string/fuel_tab_label"/>
 
-    <com.google.android.material.button.MaterialButton
-            android:id="@+id/submit_button"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:backgroundTint="@color/colorAccent"
-            app:rippleColor="@color/colorAccentDark"
-            app:strokeColor="@color/colorAccent"
-            app:strokeWidth="2dp"
-            android:textColor="@color/colorWhite"
-            android:text="@string/submit_button_find_fuel"/>
+    </com.google.android.material.tabs.TabLayout>
 
-    <com.google.android.material.button.MaterialButton
-            android:id="@+id/submit_button_car"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
+    <androidx.viewpager.widget.ViewPager
+            android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:backgroundTint="@color/colorAccent"
-            app:rippleColor="@color/colorAccentDark"
-            app:strokeColor="@color/colorAccent"
-            app:strokeWidth="2dp"
-            android:textColor="@color/colorWhite"
-            android:text="Get car"/>
+            android:layout_height="match_parent">
 
-    <TextView
-            android:id="@+id/testView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+    </androidx.viewpager.widget.ViewPager>
+
+    <!--<com.google.android.material.textfield.TextInputLayout-->
+            <!--android:layout_marginBottom="5dp"-->
+            <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="@string/input_label_origin">-->
+
+        <!--<com.google.android.material.textfield.TextInputEditText-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:maxLines="1"-->
+                <!--android:textSize="16sp"/>-->
+    <!--</com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--<com.google.android.material.textfield.TextInputLayout-->
+            <!--android:id="@+id/dialog_text_input_layout"-->
+            <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="@string/input_label_destination"-->
+            <!--app:errorEnabled="true">-->
+
+        <!--<com.google.android.material.textfield.TextInputEditText-->
+                <!--android:id="@+id/dialog_edit_text"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:inputType="text"-->
+                <!--android:maxLines="1"-->
+                <!--android:textSize="16sp"/>-->
+    <!--</com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--<com.google.android.material.button.MaterialButton-->
+            <!--android:id="@+id/submit_button"-->
+            <!--style="@style/Widget.MaterialComponents.Button.TextButton"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:backgroundTint="@color/colorAccent"-->
+            <!--app:rippleColor="@color/colorAccentDark"-->
+            <!--app:strokeColor="@color/colorAccent"-->
+            <!--app:strokeWidth="2dp"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:text="@string/submit_button_find_fuel"/>-->
+
+    <!--<com.google.android.material.button.MaterialButton-->
+            <!--android:id="@+id/submit_button_car"-->
+            <!--style="@style/Widget.MaterialComponents.Button.TextButton"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:backgroundTint="@color/colorAccent"-->
+            <!--app:rippleColor="@color/colorAccentDark"-->
+            <!--app:strokeColor="@color/colorAccent"-->
+            <!--app:strokeWidth="2dp"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:text="Get car"/>-->
+
+    <!--<TextView-->
+            <!--android:id="@+id/testView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"/>-->
 
 </LinearLayout>
