--- a/app/src/main/res/layout/fragment_car.xml
+++ b/app/src/main/res/layout/fragment_car.xml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".fragments.CarFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              tools:context=".fragments.CarFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.button.MaterialButton
+            android:id="@+id/submit_button_get_car"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="wrap_content"
+            app:backgroundTint="@color/colorAccent"
+            app:rippleColor="@color/colorAccentDark"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp"
+            android:textColor="@color/colorWhite"
+            android:text="Get car"/>
 
-</FrameLayout>
+    <EditText
+            android:padding="5dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:backgroundTint="@color/colorRegistration"
+            android:background="@color/colorRegistration"
+            android:textSize="55sp"
+            android:gravity="start"
+            android:textAlignment="center"
+            android:fontFamily="@font/number_plate"
+            android:hint="@string/input_label_registration"
+    />
+    <!--</com.google.android.material.textfield.TextInputLayout>-->
+
+</LinearLayout>
