--- a/app/src/main/res/layout/car_detail_layout.xml
+++ b/app/src/main/res/layout/car_detail_layout.xml
@@ -1,7 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:bind="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="110sp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+    >
+
+        <include
+                android:id="@+id/make"
+                layout="@layout/car_detail_box"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+        />
+
+        <include
+                android:id="@+id/model"
+                layout="@layout/car_detail_box"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+        />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100sp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+    >
+
+        <include
+                android:id="@+id/urban_mpg"
+                layout="@layout/car_detail_box"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+        />
+
+        <include
+                android:id="@+id/combined_mpg"
+                layout="@layout/car_detail_box"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+        />
+
+        <include
+                android:id="@+id/fuel_type"
+                layout="@layout/car_detail_box"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+        />
+
+    </LinearLayout>
 
 </LinearLayout>
