--- a/app/src/main/res/layout/new_car_dialog.xml
+++ b/app/src/main/res/layout/new_car_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -12,24 +13,22 @@
             android:maxLines="1"
             android:backgroundTint="@color/colorRegistration"
             android:background="@color/colorRegistration"
-            android:textSize="55sp"
             android:gravity="start"
             android:textAlignment="center"
             android:fontFamily="@font/number_plate"
             android:id="@+id/text_car_registration"
+            android:textSize="55sp"
+            android:text="SA17VLR"
             android:hint="@string/input_label_registration"
     />
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/car_test_text"
-            android:text="before"/>
+    <include layout="@layout/car_detail_layout" />
 
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/dialog_confirm_button"
+            android:layout_margin="10dp"
             android:text="Find car"/>
 
 </LinearLayout>
